--- a/Brave 2/style.css
+++ b/Brave 2/style.css
@@ -5,6 +5,7 @@
     font-family: 'Oswald', sans-serif;
 }
 
+/*Header*/
 nav{
     height: 80px;
     width: 100%;
@@ -31,12 +32,12 @@ nav ul li a{
     text-decoration: none;
 }
 
+/*section*/
 section{
     width: 80%;
     margin: auto;
     padding-top: 20px;
 }
-
 section ul li{
     display: inline-block;
     padding-right: 20px;
@@ -55,3 +56,55 @@ section ul li span{
 section .paragraph{
     padding-top: 30px;
 }
+
+/* card  */
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 50px 0;
+}
+.cards .content{
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25);
+    margin-right: 4rem;
+    margin-bottom: 2rem;
+}
+.cards .item_content{
+    padding: 15px;
+}
+.cards .item_content h3{
+    padding-bottom: 15px;
+}
+.cards .item_content p{
+    padding-bottom: 10px;
+}
+.rrp{
+    opacity: 40%;
+}
+.cards .item_content ul li{
+    color: gold;
+}
+.cards .item_content div{
+    text-align: center;
+}
+.btn_buy{
+    padding: 15px;
+    border-radius: 15px;
+    border: none;
+    margin-top: 1rem;
+}
+
+.cards .content img{
+    width: 200px;
+    height: 300px;
+    margin: 0 auto;
+    display: block;
+}
+.cards .content .item{
+    padding-right: 50px;
+}
+/* .content .item_content{
+    padding: 15px 0 15px 15px;
+} */
