--- a/Brave 3/style.css
+++ b/Brave 3/style.css
@@ -19,16 +19,21 @@ nav .logo{
     height: 5rem;
 }
 
-nav ul li{
+header ul li{
     display: inline-block;
-    padding-left: 30px;
+    padding-right: 30px;
 }
-nav ul li a:hover{
+header ul li a:hover{
     text-decoration: underline;
 }
-nav ul li a{
+header nav a{
     color: #fff;
     text-decoration: none;
+}
+header a{
+    text-decoration: none;
+    color: #000;
+    font-size: 15px;
 }
 
 /*section*/
@@ -36,21 +41,6 @@ section{
     width: 80%;
     margin: auto;
     padding-top: 20px;
-}
-section ul li{
-    display: inline-block;
-    padding-right: 20px;
-}
-section ul li a{
-    text-decoration: none;
-    color: #000;
-    font-size: 15px;
-}
-section ul li a:hover{
-    text-decoration: underline;
-}
-section .paragraph{
-    padding-top: 30px;
 }
 
 /* card  */
@@ -110,8 +100,10 @@ section .paragraph{
         padding: 0;
     }
     nav ul li{
-        padding: 0 1rem 0 1rem;
         font-size: 13px;
+    }
+    header ul{
+        text-align: center;
     }
 
     /* section */
