--- a/Brave 3/style.css
+++ b/Brave 3/style.css
@@ -54,8 +54,16 @@ section{
     margin-right: 4rem;
     margin-bottom: 2rem;
 }
+
 .cards .item_content{
     padding: 15px;
+}
+.cards .item_content ul{
+    display: flex;
+    justify-content: space-around;
+}
+.cards .item_content li{
+    list-style: none;
 }
 .cards .item_content h3{
     padding-bottom: 15px;
@@ -89,18 +97,15 @@ section{
     padding-right: 50px;
 }
 
-/* Responsive */
-/* Mobile */
+/* Responsive*/
+/* Mobile*/
 @media screen and (max-width:768px) {
     /* header */
     nav{
         display: block;
         text-align: center;
-        height: 7rem;
+        height: 8rem;
         padding: 0;
-    }
-    nav ul li{
-        font-size: 13px;
     }
     header ul{
         text-align: center;
@@ -110,11 +115,39 @@ section{
     section{
         text-align: center;
     }
-    section ul li a{
-        font-size: 12px;
+    .cards .content{
+        margin: 13px auto;
+    }
+
+}
+
+/* Responsive */
+/*Tablet*/
+@media screen and (min-width:769px) and (max-width:1023px) {
+    /* header */
+    nav{
+        display: block;
+        text-align: center;
+        height: 8rem;
+        padding: 0;
+    }
+    header nav a{
+        font-size: 18px;
+    }
+    header ul{
+        text-align: center;
+    }
+
+    /* section */
+    section{
+        text-align: center;
+    }
+    section .paragraph{
+        font-size: 18px;
     }
     .cards .content{
         margin: 13px auto;
     }
+    
 
 }
