--- a/brave 4/style.css
+++ b/brave 4/style.css
@@ -88,7 +88,7 @@ header{
         padding: 30px 0 50px 0;
     }
     .main .container .rowImg img{
-        width: 25rem;
+        width: 100%;
     }
     .btn{
         margin-top: 15px;
