Remove flexBox add Grid Finish Brave

--- a/Brave 3/style.css
+++ b/Brave 3/style.css
@@ -45,14 +45,14 @@ section{
 
 /* card  */
 .cards{
-    display: flex;
-    flex-wrap: wrap;
-    margin: 50px 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    margin: 50px 0 20px 0;
+    column-gap: 12px;
+    row-gap: 1.2rem;
 }
 .cards .content{
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25);
-    margin-right: 4rem;
-    margin-bottom: 2rem;
 }
 
 .cards .item_content{
@@ -85,11 +85,14 @@ section{
     border-radius: 15px;
     border: none;
     margin-top: 1rem;
+    background-color: #00C2CB;
+    color: #fff;
+    width: 100%;
+    cursor: pointer;
 }
-
 .cards .content img{
-    width: 235px;
-    height: 320px;
+    width: 100%;
+    height: 380px;
     margin: 0 auto;
     display: block;
 }
@@ -110,15 +113,31 @@ section{
     header ul{
         text-align: center;
     }
+    header ul li a{
+        font-size: 13px;
+    }
+    header ul li{
+        padding-right: 12px;
+    }
+    header nav a{
+        font-size: 13px;
+    }
+    header nav a:nth-child(4){
+        padding: 0;
+    }
+    
 
     /* section */
     section{
         text-align: center;
     }
-    .cards .content{
-        margin: 13px auto;
-    }
-
+    /*.cards{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 50px 0 20px 0;
+        column-gap: 12px;
+        row-gap: 1.2rem;
+    }*/
 }
 
 /* Responsive */
@@ -145,9 +164,14 @@ section{
     section .paragraph{
         font-size: 18px;
     }
-    .cards .content{
-        margin: 13px auto;
-    }
+    /*.cards{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin: 50px 0 20px 0;
+        column-gap: 12px;
+        row-gap: 1.2rem;
+    }*/
+
     
 
 }
