--- a/Brave 3/style.css
+++ b/Brave 3/style.css
@@ -38,7 +38,7 @@ header a{
 
 /*section*/
 section{
-    width: 80%;
+    width: 90%;
     margin: auto;
     padding-top: 20px;
 }
@@ -130,14 +130,15 @@ section{
     /* section */
     section{
         text-align: center;
+        width: 90%;
     }
-    /*.cards{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        margin: 50px 0 20px 0;
-        column-gap: 12px;
-        row-gap: 1.2rem;
-    }*/
+    .cards .content img{
+        width: 100%;
+        height: 360px;
+        margin: 0 auto;
+        display: block;
+    }
+
 }
 
 /* Responsive */
@@ -160,19 +161,11 @@ section{
     /* section */
     section{
         text-align: center;
+        width: 90%;
     }
     section .paragraph{
         font-size: 18px;
     }
-    /*.cards{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        margin: 50px 0 20px 0;
-        column-gap: 12px;
-        row-gap: 1.2rem;
-    }*/
-
-    
 
 }
 
